tests/parser/errors/missing_pipe.rv
var closure = |x: int, y: float {

}
